# testing-taskipy

./: .dockerignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  gunicorn.py  pyproject.toml
poc/: settings.py  urls.py
